Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -394,7 +394,7 @@
     "probs = calculate_probability(means)\n",
     "\n",
     "# Print combinations with sample means and probability of each mean value\n",
-    "\n",
+    "for c in range(len(combs))\n",
     "\n",
     "# ('A', 'B') 16.5 1/15\n",
     "# ('A', 'C') 17.0 1/15\n",
