Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -395,7 +395,7 @@
     "\n",
     "# Print combinations with sample means and probability of each mean value\n",
     "for c in range(len(combs)):\n",
-    "    print(c+1)\n",
+    "    print(c+1, combs[c], means[])\n",
     "# ('A', 'B') 16.5 1/15\n",
     "# ('A', 'C') 17.0 1/15\n",
     "# ('A', 'D') 14.0 1/15\n",
