Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -369,9 +369,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 11,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1 ('A', 'B') 16.5 1/<built-in function len>\n",
+      "2 ('A', 'C') 17.0 1/<built-in function len>\n",
+      "3 ('A', 'D') 14.0 1/<built-in function len>\n",
+      "4 ('A', 'E') 14.5 2/<built-in function len>\n",
+      "5 ('A', 'F') 18.0 1/<built-in function len>\n",
+      "6 ('B', 'C') 14.5 2/<built-in function len>\n",
+      "7 ('B', 'D') 11.5 1/<built-in function len>\n",
+      "8 ('B', 'E') 12.0 2/<built-in function len>\n",
+      "9 ('B', 'F') 15.5 1/<built-in function len>\n",
+      "10 ('C', 'D') 12.0 2/<built-in function len>\n",
+      "11 ('C', 'E') 12.5 1/<built-in function len>\n",
+      "12 ('C', 'F') 16.0 1/<built-in function len>\n",
+      "13 ('D', 'E') 9.5 1/<built-in function len>\n",
+      "14 ('D', 'F') 13.0 1/<built-in function len>\n",
+      "15 ('E', 'F') 13.5 1/<built-in function len>\n"
+     ]
+    }
+   ],
    "source": [
     "def calculate_probability(means):\n",
     "    '''\n",
@@ -395,7 +417,7 @@
     "\n",
     "# Print combinations with sample means and probability of each mean value\n",
     "for c in range(len(combs)):\n",
-    "    print(c+1, combs[c], means[])\n",
+    "    print(c+1, combs[c], means[c], probs[c])\n",
     "# ('A', 'B') 16.5 1/15\n",
     "# ('A', 'C') 17.0 1/15\n",
     "# ('A', 'D') 14.0 1/15\n",
