--- a/index.ipynb
+++ b/index.ipynb
@@ -369,28 +369,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "1 ('A', 'B') 16.5 1/<built-in function len>\n",
-      "2 ('A', 'C') 17.0 1/<built-in function len>\n",
-      "3 ('A', 'D') 14.0 1/<built-in function len>\n",
-      "4 ('A', 'E') 14.5 2/<built-in function len>\n",
-      "5 ('A', 'F') 18.0 1/<built-in function len>\n",
-      "6 ('B', 'C') 14.5 2/<built-in function len>\n",
-      "7 ('B', 'D') 11.5 1/<built-in function len>\n",
-      "8 ('B', 'E') 12.0 2/<built-in function len>\n",
-      "9 ('B', 'F') 15.5 1/<built-in function len>\n",
-      "10 ('C', 'D') 12.0 2/<built-in function len>\n",
-      "11 ('C', 'E') 12.5 1/<built-in function len>\n",
-      "12 ('C', 'F') 16.0 1/<built-in function len>\n",
-      "13 ('D', 'E') 9.5 1/<built-in function len>\n",
-      "14 ('D', 'F') 13.0 1/<built-in function len>\n",
-      "15 ('E', 'F') 13.5 1/<built-in function len>\n"
+      "1 ('A', 'B') 16.5 1/15\n",
+      "2 ('A', 'C') 17.0 1/15\n",
+      "3 ('A', 'D') 14.0 1/15\n",
+      "4 ('A', 'E') 14.5 2/15\n",
+      "5 ('A', 'F') 18.0 1/15\n",
+      "6 ('B', 'C') 14.5 2/15\n",
+      "7 ('B', 'D') 11.5 1/15\n",
+      "8 ('B', 'E') 12.0 2/15\n",
+      "9 ('B', 'F') 15.5 1/15\n",
+      "10 ('C', 'D') 12.0 2/15\n",
+      "11 ('C', 'E') 12.5 1/15\n",
+      "12 ('C', 'F') 16.0 1/15\n",
+      "13 ('D', 'E') 9.5 1/15\n",
+      "14 ('D', 'F') 13.0 1/15\n",
+      "15 ('E', 'F') 13.5 1/15\n"
      ]
     }
    ],
@@ -409,7 +409,7 @@
     "    for element in means:\n",
     "        for key in freq.keys():\n",
     "            if element == key:\n",
-    "                prob.append(str(freq[key])+\"/\"+str(len))\n",
+    "                prob.append(str(freq[key])+\"/\"+str(len(means)))\n",
     "    \n",
     "    return prob\n",
     "    \n",
