--- a/index.ipynb
+++ b/index.ipynb
@@ -468,7 +468,8 @@
     "# Use above functions to generate combinations as samples with means and calculate the probability of seeing\n",
     "# each mean value  with sample size = 5.\n",
     "\n",
-    "combs, means = sam\n",
+    "combs, means = sample_means(n, pumpkin_dict)\n",
+    "\n",
     "\n",
     "# Using 5 samples with a population of size, we can see 6 possible combinations \n",
     "# The mean of all sample means mu_x_hat is: 14.0\n",
