Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -469,7 +469,7 @@
     "# each mean value  with sample size = 5.\n",
     "\n",
     "combs, means = sample_means(n, pumpkin_dict)\n",
-    "\n",
+    "probs = calculate_probability(means)\n",
     "\n",
     "# Using 5 samples with a population of size, we can see 6 possible combinations \n",
     "# The mean of all sample means mu_x_hat is: 14.0\n",
