--- a/index.ipynb
+++ b/index.ipynb
@@ -470,7 +470,8 @@
     "\n",
     "combs, means = sample_means(n, pumpkin_dict)\n",
     "probs = calculate_probability(means)\n",
-    "for c in range()\n",
+    "for c in range(len(combs)):\n",
+    "    print(c)\n",
     "\n",
     "# Using 5 samples with a population of size, we can see 6 possible combinations \n",
     "# The mean of all sample means mu_x_hat is: 14.0\n",
