--- a/index.ipynb
+++ b/index.ipynb
@@ -521,7 +521,7 @@
    "source": [
     "# Run a for loop to execute above code for sample size 1 to 5 and visualise the spread of sample \n",
     "# means\n",
-    "\n",
+    "plt. fig\n",
     "\n",
     "\n",
     "# Using 1 samples with a population of size, we can see 6 possible combinations \n",
