--- a/index.ipynb
+++ b/index.ipynb
@@ -521,8 +521,8 @@
    "source": [
     "# Run a for loop to execute above code for sample size 1 to 5 and visualise the spread of sample \n",
     "# means\n",
-    "plt.figure(figsize)\n",
-    "\n",
+    "plt.figure(figsize=(15, 10))\n",
+    "p\n",
     "\n",
     "# Using 1 samples with a population of size, we can see 6 possible combinations \n",
     "# The mean of all sample means mu_x_hat is: 14.0\n",
