Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -522,7 +522,8 @@
     "# Run a for loop to execute above code for sample size 1 to 5 and visualise the spread of sample \n",
     "# means\n",
     "plt.figure(figsize=(15, 10))\n",
-    "plt.axvline(x=mu, label)\n",
+    "plt.axvline(x=mu, label='population mean')\n",
+    "\n",
     "\n",
     "# Using 1 samples with a population of size, we can see 6 possible combinations \n",
     "# The mean of all sample means mu_x_hat is: 14.0\n",
