Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -524,6 +524,8 @@
     "plt.figure(figsize=(15, 10))\n",
     "plt.axvline(x=mu, label='population mean')\n",
     "\n",
+    "for n in range(5):\n",
+    "    \n",
     "\n",
     "# Using 1 samples with a population of size, we can see 6 possible combinations \n",
     "# The mean of all sample means mu_x_hat is: 14.0\n",
