--- a/index.ipynb
+++ b/index.ipynb
@@ -525,7 +525,7 @@
     "plt.axvline(x=mu, label='population mean')\n",
     "\n",
     "for n in range(5):\n",
-    "    \n",
+    "    combs, means = s\n",
     "\n",
     "# Using 1 samples with a population of size, we can see 6 possible combinations \n",
     "# The mean of all sample means mu_x_hat is: 14.0\n",
