--- a/index.ipynb
+++ b/index.ipynb
@@ -526,7 +526,9 @@
     "\n",
     "for n in range(5):\n",
     "    combs, means = sample_means(n, pumpkin_dict)\n",
-    "    probs = calculate_probability\n",
+    "    probs = calculate_probability(means)\n",
+    "    val = n\n",
+    "    ar = np.a\n",
     "\n",
     "# Using 1 samples with a population of size, we can see 6 possible combinations \n",
     "# The mean of all sample means mu_x_hat is: 14.0\n",
