Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -528,7 +528,7 @@
     "    combs, means = sample_means(n, pumpkin_dict)\n",
     "    probs = calculate_probability(means)\n",
     "    val = n\n",
-    "    ar = np.a\n",
+    "    ar = np.arange(10)\n",
     "\n",
     "# Using 1 samples with a population of size, we can see 6 possible combinations \n",
     "# The mean of all sample means mu_x_hat is: 14.0\n",
