--- a/index.ipynb
+++ b/index.ipynb
@@ -529,7 +529,7 @@
     "    probs = calculate_probability(means)\n",
     "    val = n\n",
     "    ar = np.arange(10)\n",
-    "    \n",
+    "    plt.plot(means, np.z)\n",
     "\n",
     "# Using 1 samples with a population of size, we can see 6 possible combinations \n",
     "# The mean of all sample means mu_x_hat is: 14.0\n",
