--- a/index.ipynb
+++ b/index.ipynb
@@ -530,7 +530,8 @@
     "    val = n\n",
     "    ar = np.arange(10)\n",
     "    plt.plot(means, np.zeros_like(means) + val, 'x', label=(\"Sample Size: \" + str(n)))\n",
-    "\n",
+    "    plt.legend()\n",
+    "    plt.\n",
     "# Using 1 samples with a population of size, we can see 6 possible combinations \n",
     "# The mean of all sample means mu_x_hat is: 14.0\n",
     "\n",
