--- a/index.ipynb
+++ b/index.ipynb
@@ -531,7 +531,8 @@
     "    ar = np.arange(10)\n",
     "    plt.plot(means, np.zeros_like(means) + val, 'x', label=(\"Sample Size: \" + str(n)))\n",
     "    plt.legend()\n",
-    "    plt.\n",
+    "\n",
+    "    plt.show()\n",
     "# Using 1 samples with a population of size, we can see 6 possible combinations \n",
     "# The mean of all sample means mu_x_hat is: 14.0\n",
     "\n",
