--- a/index.ipynb
+++ b/index.ipynb
@@ -548,7 +548,7 @@
     "plt.figure(figsize=(15, 10))\n",
     "plt.axvline(x=mu, label='population mean')\n",
     "\n",
-    "for n in (1, 2, 3, 4, 5):\n",
+    "for n in range(1, 2, 3, 4, 5):\n",
     "    combs, means = sample_means(n, pumpkin_dict)\n",
     "    probs = calculate_probability(means)\n",
     "    val = n\n",
