--- a/index.ipynb
+++ b/index.ipynb
@@ -611,7 +611,7 @@
     "combs_list = []\n",
     "err_list = []\n",
     "# Create a for loop with changing sample sizes\n",
-    "    \n",
+    "for n in range(1, )\n",
     "    # Calculate combinations, means as earlier, append to relevant lists\n",
     "\n",
     "    \n",
