--- a/index.ipynb
+++ b/index.ipynb
@@ -611,9 +611,9 @@
     "combs_list = []\n",
     "err_list = []\n",
     "# Create a for loop with changing sample sizes\n",
-    "for n in range(1, )\n",
+    "for n in range(1, 6):\n",
     "    # Calculate combinations, means as earlier, append to relevant lists\n",
-    "\n",
+    "    combs, mean\n",
     "    \n",
     "\n",
     "    # Calculate and append the standard error by dividing sample means with square root of sample size\n",
