Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -613,7 +613,7 @@
     "# Create a for loop with changing sample sizes\n",
     "for n in range(1, 6):\n",
     "    # Calculate combinations, means as earlier, append to relevant lists\n",
-    "    combs, mean\n",
+    "    combs, means = sample_means(n, pumpki)\n",
     "    \n",
     "\n",
     "    # Calculate and append the standard error by dividing sample means with square root of sample size\n",
