--- a/index.ipynb
+++ b/index.ipynb
@@ -614,7 +614,7 @@
     "for n in range(1, 6):\n",
     "    # Calculate combinations, means as earlier, append to relevant lists\n",
     "    combs, means = sample_means(n, pumpkin_dict)\n",
-    "    combs\n",
+    "    combs_list.append\n",
     "    \n",
     "\n",
     "    # Calculate and append the standard error by dividing sample means with square root of sample size\n",
