Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -614,7 +614,8 @@
     "for n in range(1, 6):\n",
     "    # Calculate combinations, means as earlier, append to relevant lists\n",
     "    combs, means = sample_means(n, pumpkin_dict)\n",
-    "    combs_list.append\n",
+    "    combs_list.append(combs)\n",
+    "    means_list.append(m)\n",
     "    \n",
     "\n",
     "    # Calculate and append the standard error by dividing sample means with square root of sample size\n",
