Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -615,11 +615,11 @@
     "    # Calculate combinations, means as earlier, append to relevant lists\n",
     "    combs, means = sample_means(n, pumpkin_dict)\n",
     "    combs_list.append(combs)\n",
-    "    means_list.append(m)\n",
+    "    means_list.append(means)\n",
     "    \n",
     "\n",
     "    # Calculate and append the standard error by dividing sample means with square root of sample size\n",
-    "\n",
+    "    err = round(np)\n",
     "    \n",
     "\n",
     "    # Visualize sample spread and standard error values for each sample"
