--- a/index.ipynb
+++ b/index.ipynb
@@ -619,7 +619,7 @@
     "    \n",
     "\n",
     "    # Calculate and append the standard error by dividing sample means with square root of sample size\n",
-    "    err = round(np)\n",
+    "    err = round(np.std(means) / )\n",
     "    \n",
     "\n",
     "    # Visualize sample spread and standard error values for each sample"
