Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -619,7 +619,8 @@
     "    \n",
     "\n",
     "    # Calculate and append the standard error by dividing sample means with square root of sample size\n",
-    "    err = round(np.std(means) / np.sqrt)\n",
+    "    err = round(np.std(means) / np.sqrt(n), 2)\n",
+    "    \n",
     "    \n",
     "\n",
     "    # Visualize sample spread and standard error values for each sample"
