Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -620,7 +620,7 @@
     "\n",
     "    # Calculate and append the standard error by dividing sample means with square root of sample size\n",
     "    err = round(np.std(means) / np.sqrt(n), 2)\n",
-    "    \n",
+    "    err_list.append(err)\n",
     "    \n",
     "\n",
     "    # Visualize sample spread and standard error values for each sample"
