Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -623,7 +623,10 @@
     "    err_list.append(err)\n",
     "    \n",
     "\n",
-    "    # Visualize sample spread and standard error values for each sample"
+    "    # Visualize sample spread and standard error values for each sample\n",
+    "    val = n\n",
+    "    \n",
+    "    "
    ]
   },
   {
