Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -625,7 +625,7 @@
     "\n",
     "    # Visualize sample spread and standard error values for each sample\n",
     "    val = n\n",
-    "    \n",
+    "    ar = np.arange()\n",
     "    "
    ]
   },
