Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -625,7 +625,8 @@
     "\n",
     "    # Visualize sample spread and standard error values for each sample\n",
     "    val = n\n",
-    "    ar = np.arange()\n",
+    "    ar = np.arange(10)\n",
+    "    plt.plot(means, np.zero)\n",
     "    "
    ]
   },
