--- a/index.ipynb
+++ b/index.ipynb
@@ -626,7 +626,7 @@
     "    # Visualize sample spread and standard error values for each sample\n",
     "    val = n\n",
     "    ar = np.arange(10)\n",
-    "    plt.plot(means, np.zeros_like(means) + val, 'x', label=\"Sample size: \" + str(n)) \"\"\n",
+    "    plt.plot(means, np.zeros_like(means) + val, 'x', label=\"Sample size: \" + str(n)) + \" , Standard Error: \"\n",
     "    "
    ]
   },
