--- a/index.ipynb
+++ b/index.ipynb
@@ -627,6 +627,7 @@
     "    val = n\n",
     "    ar = np.arange(10)\n",
     "    plt.plot(means, np.zeros_like(means) + val, 'x', label=\"Sample size: \" + str(n)) + \" , Standard Error: \" + str(err))\n",
+    "    plt.leg\n",
     "    "
    ]
   },
