Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -627,7 +627,9 @@
     "    val = n\n",
     "    ar = np.arange(10)\n",
     "    plt.plot(means, np.zeros_like(means) + val, 'x', label=\"Sample size: \" + str(n)) + \" , Standard Error: \" + str(err))\n",
-    "    plt.leg\n",
+    "    plt.legend()\n",
+    "\n",
+    "\n",
     "    "
    ]
   },
