Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -601,9 +601,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "SyntaxError",
+     "evalue": "invalid syntax (<ipython-input-18-0f793be839da>, line 22)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-18-0f793be839da>\"\u001b[0;36m, line \u001b[0;32m22\u001b[0m\n\u001b[0;31m    plt.plot(means, np.zeros_like(means) + val, 'x', label=\"Sample size: \" + str(n)) + \" , Standard Error: \" + str(err))\u001b[0m\n\u001b[0m                                                                                                                       ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
+     ]
+    }
+   ],
    "source": [
     "\n",
     "# Create empty lists for storing sample means, combinations and standard error for each iteration\n",
@@ -629,7 +638,7 @@
     "    plt.plot(means, np.zeros_like(means) + val, 'x', label=\"Sample size: \" + str(n)) + \" , Standard Error: \" + str(err))\n",
     "    plt.legend()\n",
     "\n",
-    "\n",
+    "plt.show()\n",
     "    "
    ]
   },
