Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -629,7 +629,8 @@
     }
    ],
    "source": [
-    "\n",
+    "plt.figure(figsize=(15, 10))\n",
+    "plt.axvline(x=mu, label='population mean')\n",
     "# Create empty lists for storing sample means, combinations and standard error for each iteration\n",
     "means_list = []\n",
     "combs_list = []\n",
